Fixed json mappers.